--- a/web/style/RegisterPage.less
+++ b/web/style/RegisterPage.less
@@ -34,6 +34,12 @@
 
 	.nav-buttons {
 		text-align: center;
+		margin: 2em auto;
+	}
+
+	.login-tab {
+		max-width: @item-max-width;
+		margin: auto;
 	}
 
 	.ticket-group {
@@ -173,7 +179,6 @@
 					line-height: 2em;
 				}
 			}
-
 		}
 	}
 }
