--- a/web/style/main.less
+++ b/web/style/main.less
@@ -82,6 +82,7 @@ img.logo-large {
 @import "FundRaiserPage.less";
 @import "RegisterPage.less";
 @import "SocialShare.less";
+@import "LoginWidget.less";
 @import "footer.less";
 
 /* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
