--- a/web/style/colours.less
+++ b/web/style/colours.less
@@ -27,8 +27,19 @@
 .color-facebook {color: #3b5998;}
 .color-twitter {color:#4099ff;}
 
+@primary-bg: #aad2ef;
+@default-bg: #6e707b;
+@light-fg: white;
+@dark-fg: #414352;
 
+@default-button-colour: #deb686;
+// NB: warning and danger buttons, which we don't really use, draw colour from Bootstrap defaults
 
+@header-line-colour: #f9ecdd;
+@type-bg-colour: #dfe0e2;
+@type-line-colour: #cdced2;
+@pale-blue: #80bde7;
+@masthead-bg: #676974;
 
 @progress-bar-done: #81BEE8;
 @donation-date: #C8CBD1;
