--- a/web/style/main.less
+++ b/web/style/main.less
@@ -73,6 +73,7 @@ img.logo-large {
 @import "animation.less";
 
 // Page specific stuff
+@import "Page.less";
 @import "EditCharityPage.less";
 @import "SearchPage.less";
 @import "CharityPage.less";
