--- a/web/style/colours.less
+++ b/web/style/colours.less
@@ -33,6 +33,8 @@
 @dark-fg: #414352;
 
 @default-button-colour: #deb686;
+@darken-default-button-colour: darken(@default-button-colour, 10%);
+@dropshadow-colour: rgba(0,0,0,0.2);
 // NB: warning and danger buttons, which we don't really use, draw colour from Bootstrap defaults
 
 @header-line-colour: #f9ecdd;
