--- a/web/style/Page.less
+++ b/web/style/Page.less
@@ -34,7 +34,8 @@ For now -- safer to have the Kiltwalk stuff styled separately
 	max-width: @container-max-width;
 	margin: auto;
 	box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);	
-
+	min-height: 50vw;
+	
 	/** 
 	a branded picture banner
 	*/
