--- a/web/style/Page.less
+++ b/web/style/Page.less
@@ -35,7 +35,7 @@ For now -- safer to have the Kiltwalk stuff styled separately
 	margin: auto;
 	box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);	
 	min-height: 50vw;
-	
+
 	/** 
 	a branded picture banner
 	*/
@@ -79,4 +79,14 @@ For now -- safer to have the Kiltwalk stuff styled separately
 // Which pages get this??
 #register, #fundraiser {
 	.padded-page;
+}
+
+
+@media only screen and (max-width : 768px) {
+	.padded-page {
+		box-shadow: none;
+	}
+	.padded-block {
+		max-width: 100%;
+	}
 }
