Styling, receipt on registration page, half of image uploading (need URLs back from server), fundraiser pages a little closer to "right", new donation widget needs some pv so it can check for resolved

--- a/web/style/Page.less
+++ b/web/style/Page.less
@@ -73,6 +73,13 @@ For now -- safer to have the Kiltwalk stuff styled separately
 		border-top: medium solid @header-line-colour;
 	}	
 
+	/**
+	Bootstrap Containers have set widths for screen sizes - override!
+	*/
+	.container {
+		max-width: @container-max-width;
+	}
+
 } // ./page
 
 // Pages like FundRaiserPage and RegisterPage have a large image bg (image url set as inline style)
