Fundraiser page tweaked some more...

--- a/web/style/FundRaiserPage.less
+++ b/web/style/FundRaiserPage.less
@@ -64,7 +64,7 @@
 					display: inline-block;
 				}
 				.progress-pointer {
-					transform: translateY(-23%);
+					transform: translateY(-16%);
 					font-size: 1.5em;
 					font-weight: bold;
 					color: @progress-bar-done;
@@ -84,6 +84,7 @@
 		}
 		.progress-details {
 			height: 50%;
+			text-align: center;
 			color: black;
 		}
 	} // /.vitals .donation-progress
