--- a/web/style/FundRaiserPage.less
+++ b/web/style/FundRaiserPage.less
@@ -1,8 +1,16 @@
 @import "positioning.less";
 @import "colours.less";
 
+.bottom-divider {
+	border-bottom: 1px solid @charity-page-greyline;
+}
+
 #FundRaiserPage {
 	background: white;
+
+	.row {
+		.bottom-divider;
+	}
 
 	.event-banner {
 		padding: 0 0;
@@ -48,7 +56,7 @@
 	} // ./.vitals
 
 	.vitals .donation-progress {
-		height: 100%;
+		height: 350px;
 
 		.progress-graph {
 			height: 50%;
@@ -94,6 +102,7 @@
 			width: 150px;
 			height: 150px;
 			object-fit: cover;
+			margin-right: 0.5em;
 		}
 	}
 
@@ -109,13 +118,17 @@
 	.supporters {
 		list-style-type: none;
 		.supporter {
+			.bottom-divider;
 			position: relative;
+			
 			.supporter-photo {
 				width: 75px;
 				height: 75px;
 				border-radius: 50%;
 				object-fit: cover;
 				float: left;
+				margin-right: 0.5em;
+				margin-bottom: 0.5em;
 			}
 			.donation-date {
 				position: absolute;
@@ -128,5 +141,9 @@
 			}
 		}
 
+		.show-more {
+			text-align: center;
+			padding: 0.5em;
+		}
 	}
 }
