--- a/web/style/colours.less
+++ b/web/style/colours.less
@@ -1,3 +1,17 @@
+
+/* palette from Isabel */
+@grey: #3F4151;
+@grey-lighter: #787a85;
+@grey-lightest: #c5c6cb;
+@orange: #DF9232;
+@orange-lighter: #eab87a;
+@orange-lightest: #f5dec1;
+@pale-blue: #81bee8;
+@paler-blue: #add4f0;
+@palest-blue: #d9ebf8;
+@green: #00A55E;
+// + shades by 
+
 /* Corrado's original palette TODO refactor out, prefer semantic names */
 @colour-01: #F04B47;
 @colour-02: #A49F79;
@@ -9,17 +23,17 @@
 
 @navbarcolour: @SogiveBrandYellow;
 
-@why-tags: #DF9232;
-@bold-text-colour: #DF9232;
+@why-tags: @orange;
+@bold-text-colour: @orange;
 @why-tags-fade: #D2B387;
-@where-tags: #FACD6B;
+@where-tags: @orange-lighter;
 @where-tags-fade: #E6D49D;
 
-@donation-amt-bg: #FBCF6D;
+@donation-amt-bg: @orange-lighter;
 @donation-amt-input-bg: #FDE8BA;
 @donation-amt-fg: #3E4050;
-@donation-number-fg: #DF9232;
-@donation-button-bg: #0FA55E;
+@donation-number-fg: @orange;
+@donation-button-bg: @green;
 
 @charity-page-greybg: #E4E7EB;
 @charity-page-greyline: #C8CBD1;
@@ -27,7 +41,7 @@
 .color-facebook {color: #3b5998;}
 .color-twitter {color:#4099ff;}
 
-@primary-bg: #aad2ef;
+@primary-bg: @paler-blue;
 @default-bg: #6e707b;
 @light-fg: white;
 @dark-fg: #414352;
@@ -40,8 +54,7 @@
 @header-line-colour: #f9ecdd;
 @type-bg-colour: #dfe0e2;
 @type-line-colour: #cdced2;
-@pale-blue: #80bde7;
 @masthead-bg: #676974;
 
-@progress-bar-done: #81BEE8;
-@donation-date: #C8CBD1;
+@progress-bar-done: @pale-blue;
+@donation-date: @grey-lightest;
