--- a/web/style/colours.less
+++ b/web/style/colours.less
@@ -38,8 +38,8 @@
 @charity-page-greybg: #E4E7EB;
 @charity-page-greyline: #C8CBD1;
 
-.color-facebook {color: #3b5998;}
-.color-twitter {color:#4099ff;}
+@color-twitter: #4099ff;
+@color-facebook: #3b5998;
 
 @primary-bg: @paler-blue;
 @default-bg: #6e707b;
