--- a/web/style/main.less
+++ b/web/style/main.less
@@ -2,6 +2,7 @@
 @import "colours.less";
 @import "positioning.less";
 @import "buttons.less";
+@import "Misc.less";
 
 @font-face {
 	font-family: 'Roboto';
@@ -85,6 +86,7 @@ img.logo-large {
 @import "SocialShare.less";
 @import "LoginWidget.less";
 @import "footer.less";
+
 
 /* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
 .flexbox-1row {
