Slightly improve search + charity page layout on mobile

--- a/web/style/CharityPage.less
+++ b/web/style/CharityPage.less
@@ -401,3 +401,22 @@
 		margin-top: 15px;
 	}
 } // ./#charity
+
+@media only screen and (max-width : 768px) {
+	#charity .donation-impact {
+		.donation-input {
+			position: relative;
+			right: 0;
+		}
+		
+		.will-fund, .donation-arrow-right, .donation-arrow-down {
+			display: none;
+		}
+		
+		.donate-button {
+			margin: auto;
+			float: none;
+			text-align: center;
+		}
+	}
+}
