--- a/web/style/buttons.less
+++ b/web/style/buttons.less
@@ -7,13 +7,11 @@
 
 // // Using #mainDiv to increase specificity of selectors
 #mainDiv {
-// 	.btn {
-// 		// Border-radius can't overlap, so it gets clamped to the largest non-overlapping value - giving us semicircular ends
-// 		border-radius: 100vw;
-// 		//box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
-// 		box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
-// 		// border: none; looks fuzzy without a border
-// 	}
+	
+	.btn-round {
+		// Border-radius can't overlap, so it gets clamped to the largest non-overlapping value - giving us semicircular ends
+		border-radius: 100vw;
+	}
 	
 // 	.btn-default {
 // 		background-color: @default-button-colour;
