--- a/web/style/LoginWidget.less
+++ b/web/style/LoginWidget.less
@@ -1,6 +1,6 @@
 @import "colours.less";
 
-.login-widget {
+// .login-widget {
 	.login-guts {
 		.login-divs {
 			display: flex; // Make cols the same height
@@ -13,6 +13,10 @@
 				margin-right: 0.5em;
 			}
 		}
+		.btn.signin {
+			width:100%;
+			text-align: left;
+		}
 	}
 	.switch-verb {
 		padding: 1em;
@@ -20,4 +24,4 @@
 		background: @charity-page-greybg;
 		border-radius: 0.25em;
 	}
-}
+// }
