--- a/web/style/colours.less
+++ b/web/style/colours.less
@@ -58,3 +58,11 @@
 
 @progress-bar-done: @pale-blue;
 @donation-date: @grey-lightest;
+
+.color-facebook {color: #3b5998;}
+.color-twitter {color:#4099ff;}
+.color-instagram {color:#e95950;}
+
+// .bgcolor-facebook {background-color: #3b5998; color:white;}
+// .bgcolor-twitter {background-color:#4099ff; color:white;}
+// .bgcolor-instagram {background-color:#e95950; color:white;}
