--- a/web/style/Donation.less
+++ b/web/style/Donation.less
@@ -158,11 +158,12 @@
 	/* The wide down-arrow decoration flowing from the output column to the donate button */
 	.donation-arrow-down {
 		float:right;
-		height:30px;
+		// height:30px;
+		width:100%;
 	}
 
 	.below-arrow {
-		margin-top: -5px;
+		margin-top: -15px; // cos the down arrow has lots of whitespace
 		clear:both;
 		padding-bottom:5px;
 	}
@@ -171,6 +172,7 @@
 		margin-right: 60px;
 		float:right;
 		padding:15px;
+		padding-top:0px;
 	}
 } // ./donation-impact
 
