--- a/web/style/buttons.less
+++ b/web/style/buttons.less
@@ -5,9 +5,16 @@
 // We can copy stuff from Bootstrap
 // But for now, let's just use vanilla
 
-// // Using #mainDiv to increase specificity of selectors
+// // Using #mainDiv to increase specificity of selectors to beat BS
 #mainDiv {
 	
+	.btn { // double BS normal rounding
+		border-radius: 8px;
+	}
+	.btn-lg {
+		border-radius: 12px;
+	}
+
 	.btn-round {
 		// Border-radius can't overlap, so it gets clamped to the largest non-overlapping value - giving us semicircular ends
 		border-radius: 100vw;
