--- a/web/style/Donation.less
+++ b/web/style/Donation.less
@@ -157,9 +157,8 @@
 
 	/* The wide down-arrow decoration flowing from the output column to the donate button */
 	.donation-arrow-down {
-		float:right;
-		// height:30px;
-		width:100%;
+		float: right;
+		width: 100%;
 	}
 
 	.below-arrow {
@@ -169,10 +168,13 @@
 	}
 
 	.donate-button {
-		margin-right: 60px;
-		float:right;
-		padding:15px;
-		padding-top:0px;
+		margin-right: 40px;
+		margin-bottom: 0.5em;
+		margin-top: -1em;
+		float: right;
+		padding: 15px;
+		padding-top: 0px;
+		
 	}
 } // ./donation-impact
 
