--- a/web/style/CharityPage.less
+++ b/web/style/CharityPage.less
@@ -82,7 +82,9 @@
 			height: @band-3-height;
 		}
 	}
+}
 
+#charity {
 	.impact-column {
 		.header {
 			background: #C1DEF2;
@@ -105,6 +107,8 @@
 				margin-top: 0;
 				margin-bottom: 0;
 				border-left: 0;
+				padding-left: 5px;
+				padding-right: 5px;
 				.extend-content-to-sides(@bs-column-padding);
 
 				span {
@@ -113,14 +117,14 @@
 
 				&.why-tags {					
 					span {
-						border-left: 15px solid @why-tags;
-						background-color: @why-tags-fade;
+						border-left: 15px solid @why-tags-fade;
+						background-color: @why-tags;
 					}
 				}
 				&.where-tags {					
 					span {
-						border-left: 15px solid @where-tags;
-						background-color: @where-tags-fade;
+						border-left: 15px solid @where-tags-fade;
+						background-color: @where-tags;
 					}
 				}
 
@@ -130,9 +134,11 @@
 
 			}
 
-		}
+		} // ./header
 	} // ./.impact-column
+} 
 
+#charity {
 	.info-column {
 		height: 100%;
 		/* hide long urls */
