added a new less file so that I could start optimising the eventpage for mobile devices

--- a/web/style/main.less
+++ b/web/style/main.less
@@ -86,6 +86,7 @@ img.logo-large {
 @import "SocialShare.less";
 @import "LoginWidget.less";
 @import "footer.less";
+@import "EventPage.less";
 
 
 /* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
