--- a/web/style/FundRaiserPage.less
+++ b/web/style/FundRaiserPage.less
@@ -151,3 +151,12 @@
 		}
 	}
 }
+
+
+@media only screen and (max-width : 768px) {
+	div#mainDiv > div > div.container.avoid-navbar > div#fundraiser.page > div > div#FundRaiserPage.container > div.row > div.me.col-md-6 { min-height: 300px; }
+}
+
+@media only screen and (max-width : 768px) {
+	div#mainDiv > div > div.container.avoid-navbar > div#fundraiser.page > div > div#FundRaiserPage.container > div.row > div.charity-info.col-md-6 { min-height: 300px; }
+}
